// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minimal usage 1`] = `
Object {
  "Outputs": Object {
    "ConstructHubMonitoringWatchfulWatchfulDashboard75D318D0": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://console.aws.amazon.com/cloudwatch/home?region=",
            Object {
              "Ref": "AWS::Region",
            },
            "#dashboards:name=",
            Object {
              "Ref": "ConstructHubMonitoringWatchfulDashboardB8493D55",
            },
          ],
        ],
      },
    },
    "ConstructHubWebAppDomainNameDC10F8DD": Object {
      "Export": Object {
        "Name": "ConstructHubDomainName",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "ConstructHubWebAppDistribution1F181DC9",
          "DomainName",
        ],
      },
    },
  },
  "Parameters": Object {
    "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103ArtifactHash2ABB7EC3": Object {
      "Description": "Artifact hash for asset \\"3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103\\"",
      "Type": "String",
    },
    "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3Bucket3FDF578C": Object {
      "Description": "S3 bucket for asset \\"3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103\\"",
      "Type": "String",
    },
    "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3VersionKeyF08BDB71": Object {
      "Description": "S3 key for asset version \\"3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103\\"",
      "Type": "String",
    },
    "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bArtifactHash297EEE8C": Object {
      "Description": "Artifact hash for asset \\"82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4b\\"",
      "Type": "String",
    },
    "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3Bucket68D54260": Object {
      "Description": "S3 bucket for asset \\"82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4b\\"",
      "Type": "String",
    },
    "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3VersionKeyDB7FEE81": Object {
      "Description": "S3 key for asset version \\"82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4b\\"",
      "Type": "String",
    },
    "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfArtifactHash85F58E48": Object {
      "Description": "Artifact hash for asset \\"c24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cf\\"",
      "Type": "String",
    },
    "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3Bucket55EFA30C": Object {
      "Description": "S3 bucket for asset \\"c24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cf\\"",
      "Type": "String",
    },
    "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3VersionKey60329B70": Object {
      "Description": "S3 key for asset version \\"c24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cf\\"",
      "Type": "String",
    },
    "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acArtifactHashEB2972AB": Object {
      "Description": "Artifact hash for asset \\"c297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61ac\\"",
      "Type": "String",
    },
    "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3BucketEEBDAFEE": Object {
      "Description": "S3 bucket for asset \\"c297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61ac\\"",
      "Type": "String",
    },
    "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3VersionKeyC4AFEB57": Object {
      "Description": "S3 key for asset version \\"c297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61ac\\"",
      "Type": "String",
    },
    "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5ArtifactHash61547DDB": Object {
      "Description": "Artifact hash for asset \\"daab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5\\"",
      "Type": "String",
    },
    "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3BucketEAD14DDE": Object {
      "Description": "S3 bucket for asset \\"daab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5\\"",
      "Type": "String",
    },
    "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3VersionKey30AEE575": Object {
      "Description": "S3 key for asset version \\"daab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5\\"",
      "Type": "String",
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68ArtifactHashD9A515C3": Object {
      "Description": "Artifact hash for asset \\"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\\"",
      "Type": "String",
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3BucketAEADE8C7": Object {
      "Description": "S3 bucket for asset \\"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\\"",
      "Type": "String",
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyE415415F": Object {
      "Description": "S3 key for asset version \\"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "ConstructHubDummyFoo7325132B": Object {
      "DependsOn": Array [
        "ConstructHubDummyFooServiceRoleD36C3C19",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3BucketEAD14DDE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3VersionKey30AEE575",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3VersionKey30AEE575",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "ConstructHubDummyFooServiceRoleD36C3C19",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "ConstructHubDummyFooServiceRoleD36C3C19": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ConstructHubDummyHello173E8657": Object {
      "DependsOn": Array [
        "ConstructHubDummyHelloServiceRoleCA7D7B43",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3Bucket68D54260",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3VersionKeyDB7FEE81",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3VersionKeyDB7FEE81",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "ConstructHubDummyHelloServiceRoleCA7D7B43",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "ConstructHubDummyHelloServiceRoleCA7D7B43": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ConstructHubMonitoringDashboard78E057C8": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"metric\\",\\"width\\":24,\\"height\\":6,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Home Page Canary\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ConstructHubMonitoringWebCanaryHomePageErrorsE7BB4002",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}}]}",
            ],
          ],
        },
        "DashboardName": "construct-hub-high-severity",
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "ConstructHubMonitoringWatchfulDashboardB8493D55": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":2,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"# Hello Function\\\\n\\\\n[button:AWS Lambda Console](https://console.aws.amazon.com/lambda/home?region=",
              Object {
                "Ref": "AWS::Region",
              },
              "#/functions/",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "?tab=graph) [button:CloudWatch Logs](https://console.aws.amazon.com/cloudwatch/home?region=",
              Object {
                "Ref": "AWS::Region",
              },
              "#logEventViewer:group=/aws/lambda/",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              ")\\"}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":0,\\"y\\":2,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Invocations/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Invocations\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":6,\\"y\\":2,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Errors\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Errors > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":12,\\"y\\":2,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Throttles/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Throttles\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Throttles > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":18,\\"y\\":2,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Duration/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Duration\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "\\",{\\"label\\":\\"p99\\",\\"stat\\":\\"p99\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"p99 > 2000 for 3 datapoints within 15 minutes\\",\\"value\\":2000,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":2,\\"x\\":0,\\"y\\":8,\\"properties\\":{\\"markdown\\":\\"# Foo Function\\\\n\\\\n[button:AWS Lambda Console](https://console.aws.amazon.com/lambda/home?region=",
              Object {
                "Ref": "AWS::Region",
              },
              "#/functions/",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "?tab=graph) [button:CloudWatch Logs](https://console.aws.amazon.com/cloudwatch/home?region=",
              Object {
                "Ref": "AWS::Region",
              },
              "#logEventViewer:group=/aws/lambda/",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              ")\\"}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":0,\\"y\\":10,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Invocations/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Invocations\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":6,\\"y\\":10,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Errors\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Errors > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":12,\\"y\\":10,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Throttles/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Throttles\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Throttles > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":18,\\"y\\":10,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Duration/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Duration\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "\\",{\\"label\\":\\"p99\\",\\"stat\\":\\"p99\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"p99 > 2000 for 3 datapoints within 15 minutes\\",\\"value\\":2000,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}}]}",
            ],
          ],
        },
        "DashboardName": "construct-hub",
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyFoo28D83547DurationAlarm5CEDA618": Object {
      "Properties": Object {
        "AlarmDescription": "p99 latency >= 2s (80%)",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "p99",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "FunctionName",
                    "Value": Object {
                      "Ref": "ConstructHubDummyFoo7325132B",
                    },
                  },
                ],
                "MetricName": "Duration",
                "Namespace": "AWS/Lambda",
              },
              "Period": 300,
              "Stat": "p99",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 2000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyFoo28D83547ErrorsAlarmFC099231": Object {
      "Properties": Object {
        "AlarmDescription": "Over 0 errors per minute",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "ConstructHubDummyFoo7325132B",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyFoo28D83547ThrottlesAlarm6C169B0F": Object {
      "Properties": Object {
        "AlarmDescription": "Over 0 throttles per minute",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "ConstructHubDummyFoo7325132B",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Throttles",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyHelloB6A8CCAFDurationAlarm48B3EB28": Object {
      "Properties": Object {
        "AlarmDescription": "p99 latency >= 2s (80%)",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "p99",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "FunctionName",
                    "Value": Object {
                      "Ref": "ConstructHubDummyHello173E8657",
                    },
                  },
                ],
                "MetricName": "Duration",
                "Namespace": "AWS/Lambda",
              },
              "Period": 300,
              "Stat": "p99",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 2000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyHelloB6A8CCAFErrorsAlarm46FA21F1": Object {
      "Properties": Object {
        "AlarmDescription": "Over 0 errors per minute",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "ConstructHubDummyHello173E8657",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyHelloB6A8CCAFThrottlesAlarm6105C679": Object {
      "Properties": Object {
        "AlarmDescription": "Over 0 throttles per minute",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "ConstructHubDummyHello173E8657",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Throttles",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWebCanaryHomePageErrorsE7BB4002": Object {
      "Properties": Object {
        "AlarmActions": Array [
          "arn:aws:sns:us-east-1:123456789012:mystack-mytopic-NZJ5JSMVGFIE",
        ],
        "AlarmDescription": Object {
          "Fn::Join": Array [
            "",
            Array [
              "80% error rate for https://",
              Object {
                "Fn::GetAtt": Array [
                  "ConstructHubWebAppDistribution1F181DC9",
                  "DomainName",
                ],
              },
              " (Home Page)",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "https://",
                  Object {
                    "Fn::GetAtt": Array [
                      "ConstructHubWebAppDistribution1F181DC9",
                      "DomainName",
                    ],
                  },
                  " Errors",
                ],
              ],
            },
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "FunctionName",
                    "Value": Object {
                      "Ref": "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionF27ADDC8",
                    },
                  },
                ],
                "MetricName": "Errors",
                "Namespace": "AWS/Lambda",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 4,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionF27ADDC8": Object {
      "DependsOn": Array [
        "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionServiceRole9AAAD93C",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3BucketEEBDAFEE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3VersionKeyC4AFEB57",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3VersionKeyC4AFEB57",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "HTTP GET https://",
              Object {
                "Fn::GetAtt": Array [
                  "ConstructHubWebAppDistribution1F181DC9",
                  "DomainName",
                ],
              },
              ": Home Page",
            ],
          ],
        },
        "Environment": Object {
          "Variables": Object {
            "URL": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "https://",
                  Object {
                    "Fn::GetAtt": Array [
                      "ConstructHubWebAppDistribution1F181DC9",
                      "DomainName",
                    ],
                  },
                ],
              ],
            },
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionServiceRole9AAAD93C",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionServiceRole9AAAD93C": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ConstructHubMonitoringWebCanaryHomePageRuleAllowEventRuleTestConstructHubMonitoringWebCanaryHomePageHttpGetFunction941819C9E47F90EE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionF27ADDC8",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ConstructHubMonitoringWebCanaryHomePageRuleE14F9F4E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "ConstructHubMonitoringWebCanaryHomePageRuleE14F9F4E": Object {
      "Properties": Object {
        "ScheduleExpression": "rate(1 minute)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionF27ADDC8",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "ConstructHubWebAppDeployWebsiteAwsCliLayer23CFFBC1": Object {
      "Properties": Object {
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3BucketAEADE8C7",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyE415415F",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyE415415F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "ConstructHubWebAppDeployWebsiteCustomResourceE6DF98C9": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DestinationBucketName": Object {
          "Ref": "ConstructHubWebAppWebsiteBucket4B2B9DB2",
        },
        "DistributionId": Object {
          "Ref": "ConstructHubWebAppDistribution1F181DC9",
        },
        "Prune": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": Array [
          Object {
            "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3Bucket3FDF578C",
          },
        ],
        "SourceObjectKeys": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3VersionKeyF08BDB71",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3VersionKeyF08BDB71",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        ],
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "ConstructHubWebAppDistribution1F181DC9": Object {
      "Properties": Object {
        "DistributionConfig": Object {
          "CacheBehaviors": Array [
            Object {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/packages/*",
              "TargetOriginId": "TestConstructHubWebAppDistributionOrigin276090F90",
              "ViewerProtocolPolicy": "allow-all",
            },
          ],
          "CustomErrorResponses": Array [
            Object {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
            Object {
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": Object {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "TargetOriginId": "TestConstructHubWebAppDistributionOrigin171FF58D3",
            "ViewerProtocolPolicy": "allow-all",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": Array [
            Object {
              "DomainName": Object {
                "Fn::GetAtt": Array [
                  "ConstructHubWebAppWebsiteBucket4B2B9DB2",
                  "RegionalDomainName",
                ],
              },
              "Id": "TestConstructHubWebAppDistributionOrigin171FF58D3",
              "S3OriginConfig": Object {
                "OriginAccessIdentity": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "origin-access-identity/cloudfront/",
                      Object {
                        "Ref": "ConstructHubWebAppDistributionOrigin1S3Origin694AF937",
                      },
                    ],
                  ],
                },
              },
            },
            Object {
              "CustomOriginConfig": Object {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": Array [
                  "TLSv1.2",
                ],
              },
              "DomainName": "awscdk.io",
              "Id": "TestConstructHubWebAppDistributionOrigin276090F90",
            },
          ],
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "ConstructHubWebAppDistributionOrigin1S3Origin694AF937": Object {
      "Properties": Object {
        "CloudFrontOriginAccessIdentityConfig": Object {
          "Comment": "Identity for TestConstructHubWebAppDistributionOrigin171FF58D3",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "ConstructHubWebAppWebsiteBucket4B2B9DB2": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "ConstructHubWebAppWebsiteBucketPolicy17174C06": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "ConstructHubWebAppWebsiteBucket4B2B9DB2",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "ConstructHubWebAppDistributionOrigin1S3Origin694AF937",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "ConstructHubWebAppWebsiteBucket4B2B9DB2",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": Object {
      "DependsOn": Array [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3Bucket55EFA30C",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3VersionKey60329B70",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3VersionKey60329B70",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Layers": Array [
          Object {
            "Ref": "ConstructHubWebAppDeployWebsiteAwsCliLayer23CFFBC1",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
            "Arn",
          ],
        },
        "Runtime": "python3.6",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3Bucket3FDF578C",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3Bucket3FDF578C",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "ConstructHubWebAppWebsiteBucket4B2B9DB2",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "ConstructHubWebAppWebsiteBucket4B2B9DB2",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "Roles": Array [
          Object {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`with domain 1`] = `
Object {
  "Mappings": Object {
    "AWSCloudFrontPartitionHostedZoneIdMap": Object {
      "aws": Object {
        "zoneId": "Z2FDTNDATAQYW2",
      },
      "aws-cn": Object {
        "zoneId": "Z3RFFRIM2A3IF5",
      },
    },
  },
  "Outputs": Object {
    "ConstructHubMonitoringWatchfulWatchfulDashboard75D318D0": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://console.aws.amazon.com/cloudwatch/home?region=",
            Object {
              "Ref": "AWS::Region",
            },
            "#dashboards:name=",
            Object {
              "Ref": "ConstructHubMonitoringWatchfulDashboardB8493D55",
            },
          ],
        ],
      },
    },
    "ConstructHubWebAppDomainNameDC10F8DD": Object {
      "Export": Object {
        "Name": "ConstructHubDomainName",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "ConstructHubWebAppDistribution1F181DC9",
          "DomainName",
        ],
      },
    },
  },
  "Parameters": Object {
    "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103ArtifactHash2ABB7EC3": Object {
      "Description": "Artifact hash for asset \\"3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103\\"",
      "Type": "String",
    },
    "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3Bucket3FDF578C": Object {
      "Description": "S3 bucket for asset \\"3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103\\"",
      "Type": "String",
    },
    "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3VersionKeyF08BDB71": Object {
      "Description": "S3 key for asset version \\"3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103\\"",
      "Type": "String",
    },
    "AssetParameters7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4ArtifactHash5E28809B": Object {
      "Description": "Artifact hash for asset \\"7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4\\"",
      "Type": "String",
    },
    "AssetParameters7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4S3Bucket5BEBDCBE": Object {
      "Description": "S3 bucket for asset \\"7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4\\"",
      "Type": "String",
    },
    "AssetParameters7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4S3VersionKey326451BC": Object {
      "Description": "S3 key for asset version \\"7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4\\"",
      "Type": "String",
    },
    "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bArtifactHash297EEE8C": Object {
      "Description": "Artifact hash for asset \\"82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4b\\"",
      "Type": "String",
    },
    "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3Bucket68D54260": Object {
      "Description": "S3 bucket for asset \\"82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4b\\"",
      "Type": "String",
    },
    "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3VersionKeyDB7FEE81": Object {
      "Description": "S3 key for asset version \\"82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4b\\"",
      "Type": "String",
    },
    "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfArtifactHash85F58E48": Object {
      "Description": "Artifact hash for asset \\"c24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cf\\"",
      "Type": "String",
    },
    "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3Bucket55EFA30C": Object {
      "Description": "S3 bucket for asset \\"c24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cf\\"",
      "Type": "String",
    },
    "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3VersionKey60329B70": Object {
      "Description": "S3 key for asset version \\"c24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cf\\"",
      "Type": "String",
    },
    "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acArtifactHashEB2972AB": Object {
      "Description": "Artifact hash for asset \\"c297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61ac\\"",
      "Type": "String",
    },
    "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3BucketEEBDAFEE": Object {
      "Description": "S3 bucket for asset \\"c297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61ac\\"",
      "Type": "String",
    },
    "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3VersionKeyC4AFEB57": Object {
      "Description": "S3 key for asset version \\"c297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61ac\\"",
      "Type": "String",
    },
    "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5ArtifactHash61547DDB": Object {
      "Description": "Artifact hash for asset \\"daab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5\\"",
      "Type": "String",
    },
    "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3BucketEAD14DDE": Object {
      "Description": "S3 bucket for asset \\"daab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5\\"",
      "Type": "String",
    },
    "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3VersionKey30AEE575": Object {
      "Description": "S3 key for asset version \\"daab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5\\"",
      "Type": "String",
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68ArtifactHashD9A515C3": Object {
      "Description": "Artifact hash for asset \\"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\\"",
      "Type": "String",
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3BucketAEADE8C7": Object {
      "Description": "S3 bucket for asset \\"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\\"",
      "Type": "String",
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyE415415F": Object {
      "Description": "S3 key for asset version \\"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CertCertificateRequestorFunction98FDF273": Object {
      "DependsOn": Array [
        "CertCertificateRequestorFunctionServiceRoleDefaultPolicy4F1E63AC",
        "CertCertificateRequestorFunctionServiceRoleF65859C0",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4S3Bucket5BEBDCBE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4S3VersionKey326451BC",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters7af6295e521fd55af94332393ceffb3e866aac4dc4956321f7918f21e72199e4S3VersionKey326451BC",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.certificateRequestHandler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CertCertificateRequestorFunctionServiceRoleF65859C0",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CertCertificateRequestorFunctionServiceRoleDefaultPolicy4F1E63AC": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "acm:RequestCertificate",
                "acm:DescribeCertificate",
                "acm:DeleteCertificate",
                "acm:AddTagsToCertificate",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": "route53:GetChange",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": "route53:changeResourceRecordSets",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":route53:::hostedzone/ZONEID",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CertCertificateRequestorFunctionServiceRoleDefaultPolicy4F1E63AC",
        "Roles": Array [
          Object {
            "Ref": "CertCertificateRequestorFunctionServiceRoleF65859C0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CertCertificateRequestorFunctionServiceRoleF65859C0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CertCertificateRequestorResource9D0836FD": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DomainName": "my.construct.hub",
        "HostedZoneId": "ZONEID",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CertCertificateRequestorFunction98FDF273",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "ConstructHubDummyFoo7325132B": Object {
      "DependsOn": Array [
        "ConstructHubDummyFooServiceRoleD36C3C19",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3BucketEAD14DDE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3VersionKey30AEE575",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersdaab642f6006051eef33e6a891c83a6e932bf1a6729c3eacdb7f603e8a7e28e5S3VersionKey30AEE575",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "ConstructHubDummyFooServiceRoleD36C3C19",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "ConstructHubDummyFooServiceRoleD36C3C19": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ConstructHubDummyHello173E8657": Object {
      "DependsOn": Array [
        "ConstructHubDummyHelloServiceRoleCA7D7B43",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3Bucket68D54260",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3VersionKeyDB7FEE81",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters82d882471cef8cd692b3c0bd36c8deee2c7a6ba4db029780d6b05de0e2c1ad4bS3VersionKeyDB7FEE81",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "ConstructHubDummyHelloServiceRoleCA7D7B43",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "ConstructHubDummyHelloServiceRoleCA7D7B43": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ConstructHubMonitoringDashboard78E057C8": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"metric\\",\\"width\\":24,\\"height\\":6,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Home Page Canary\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ConstructHubMonitoringWebCanaryHomePageErrorsE7BB4002",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}}]}",
            ],
          ],
        },
        "DashboardName": "construct-hub-high-severity",
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "ConstructHubMonitoringWatchfulDashboardB8493D55": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":2,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"# Hello Function\\\\n\\\\n[button:AWS Lambda Console](https://console.aws.amazon.com/lambda/home?region=",
              Object {
                "Ref": "AWS::Region",
              },
              "#/functions/",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "?tab=graph) [button:CloudWatch Logs](https://console.aws.amazon.com/cloudwatch/home?region=",
              Object {
                "Ref": "AWS::Region",
              },
              "#logEventViewer:group=/aws/lambda/",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              ")\\"}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":0,\\"y\\":2,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Invocations/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Invocations\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":6,\\"y\\":2,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Errors\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Errors > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":12,\\"y\\":2,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Throttles/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Throttles\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Throttles > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":18,\\"y\\":2,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Duration/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Duration\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyHello173E8657",
              },
              "\\",{\\"label\\":\\"p99\\",\\"stat\\":\\"p99\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"p99 > 2000 for 3 datapoints within 15 minutes\\",\\"value\\":2000,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":2,\\"x\\":0,\\"y\\":8,\\"properties\\":{\\"markdown\\":\\"# Foo Function\\\\n\\\\n[button:AWS Lambda Console](https://console.aws.amazon.com/lambda/home?region=",
              Object {
                "Ref": "AWS::Region",
              },
              "#/functions/",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "?tab=graph) [button:CloudWatch Logs](https://console.aws.amazon.com/cloudwatch/home?region=",
              Object {
                "Ref": "AWS::Region",
              },
              "#logEventViewer:group=/aws/lambda/",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              ")\\"}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":0,\\"y\\":10,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Invocations/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Invocations\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":6,\\"y\\":10,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Errors\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Errors > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":12,\\"y\\":10,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Throttles/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Throttles\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "\\",{\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Throttles > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":6,\\"x\\":18,\\"y\\":10,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Duration/5min\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/Lambda\\",\\"Duration\\",\\"FunctionName\\",\\"",
              Object {
                "Ref": "ConstructHubDummyFoo7325132B",
              },
              "\\",{\\"label\\":\\"p99\\",\\"stat\\":\\"p99\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"p99 > 2000 for 3 datapoints within 15 minutes\\",\\"value\\":2000,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{}}}]}",
            ],
          ],
        },
        "DashboardName": "construct-hub",
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyFoo28D83547DurationAlarm5CEDA618": Object {
      "Properties": Object {
        "AlarmDescription": "p99 latency >= 2s (80%)",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "p99",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "FunctionName",
                    "Value": Object {
                      "Ref": "ConstructHubDummyFoo7325132B",
                    },
                  },
                ],
                "MetricName": "Duration",
                "Namespace": "AWS/Lambda",
              },
              "Period": 300,
              "Stat": "p99",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 2000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyFoo28D83547ErrorsAlarmFC099231": Object {
      "Properties": Object {
        "AlarmDescription": "Over 0 errors per minute",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "ConstructHubDummyFoo7325132B",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyFoo28D83547ThrottlesAlarm6C169B0F": Object {
      "Properties": Object {
        "AlarmDescription": "Over 0 throttles per minute",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "ConstructHubDummyFoo7325132B",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Throttles",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyHelloB6A8CCAFDurationAlarm48B3EB28": Object {
      "Properties": Object {
        "AlarmDescription": "p99 latency >= 2s (80%)",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "p99",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "FunctionName",
                    "Value": Object {
                      "Ref": "ConstructHubDummyHello173E8657",
                    },
                  },
                ],
                "MetricName": "Duration",
                "Namespace": "AWS/Lambda",
              },
              "Period": 300,
              "Stat": "p99",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 2000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyHelloB6A8CCAFErrorsAlarm46FA21F1": Object {
      "Properties": Object {
        "AlarmDescription": "Over 0 errors per minute",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "ConstructHubDummyHello173E8657",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWatchfulTestConstructHubDummyHelloB6A8CCAFThrottlesAlarm6105C679": Object {
      "Properties": Object {
        "AlarmDescription": "Over 0 throttles per minute",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "ConstructHubDummyHello173E8657",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Throttles",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWebCanaryHomePageErrorsE7BB4002": Object {
      "Properties": Object {
        "AlarmActions": Array [
          "arn:aws:sns:us-east-1:123456789012:mystack-mytopic-NZJ5JSMVGFIE",
        ],
        "AlarmDescription": Object {
          "Fn::Join": Array [
            "",
            Array [
              "80% error rate for https://",
              Object {
                "Fn::GetAtt": Array [
                  "ConstructHubWebAppDistribution1F181DC9",
                  "DomainName",
                ],
              },
              " (Home Page)",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "https://",
                  Object {
                    "Fn::GetAtt": Array [
                      "ConstructHubWebAppDistribution1F181DC9",
                      "DomainName",
                    ],
                  },
                  " Errors",
                ],
              ],
            },
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "FunctionName",
                    "Value": Object {
                      "Ref": "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionF27ADDC8",
                    },
                  },
                ],
                "MetricName": "Errors",
                "Namespace": "AWS/Lambda",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 4,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionF27ADDC8": Object {
      "DependsOn": Array [
        "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionServiceRole9AAAD93C",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3BucketEEBDAFEE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3VersionKeyC4AFEB57",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc297ce933562ff3d10ec3921d0b6dc79a10b86a7efeb58631ce7e45f76fc61acS3VersionKeyC4AFEB57",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "HTTP GET https://",
              Object {
                "Fn::GetAtt": Array [
                  "ConstructHubWebAppDistribution1F181DC9",
                  "DomainName",
                ],
              },
              ": Home Page",
            ],
          ],
        },
        "Environment": Object {
          "Variables": Object {
            "URL": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "https://",
                  Object {
                    "Fn::GetAtt": Array [
                      "ConstructHubWebAppDistribution1F181DC9",
                      "DomainName",
                    ],
                  },
                ],
              ],
            },
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionServiceRole9AAAD93C",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionServiceRole9AAAD93C": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ConstructHubMonitoringWebCanaryHomePageRuleAllowEventRuleTestConstructHubMonitoringWebCanaryHomePageHttpGetFunction941819C9E47F90EE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionF27ADDC8",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ConstructHubMonitoringWebCanaryHomePageRuleE14F9F4E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "ConstructHubMonitoringWebCanaryHomePageRuleE14F9F4E": Object {
      "Properties": Object {
        "ScheduleExpression": "rate(1 minute)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ConstructHubMonitoringWebCanaryHomePageHttpGetFunctionF27ADDC8",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "ConstructHubWebAppARecord3863FF6C": Object {
      "Properties": Object {
        "AliasTarget": Object {
          "DNSName": Object {
            "Fn::GetAtt": Array [
              "ConstructHubWebAppDistribution1F181DC9",
              "DomainName",
            ],
          },
          "HostedZoneId": Object {
            "Fn::FindInMap": Array [
              "AWSCloudFrontPartitionHostedZoneIdMap",
              Object {
                "Ref": "AWS::Partition",
              },
              "zoneId",
            ],
          },
        },
        "Comment": "Created by the AWS CDK",
        "HostedZoneId": "ZONEID",
        "Name": "my.construct.hub.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "ConstructHubWebAppAaaaRecord5D99098B": Object {
      "Properties": Object {
        "AliasTarget": Object {
          "DNSName": Object {
            "Fn::GetAtt": Array [
              "ConstructHubWebAppDistribution1F181DC9",
              "DomainName",
            ],
          },
          "HostedZoneId": Object {
            "Fn::FindInMap": Array [
              "AWSCloudFrontPartitionHostedZoneIdMap",
              Object {
                "Ref": "AWS::Partition",
              },
              "zoneId",
            ],
          },
        },
        "Comment": "Created by the AWS CDK",
        "HostedZoneId": "ZONEID",
        "Name": "my.construct.hub.",
        "Type": "AAAA",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "ConstructHubWebAppDeployWebsiteAwsCliLayer23CFFBC1": Object {
      "Properties": Object {
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3BucketAEADE8C7",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyE415415F",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyE415415F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "ConstructHubWebAppDeployWebsiteCustomResourceE6DF98C9": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DestinationBucketName": Object {
          "Ref": "ConstructHubWebAppWebsiteBucket4B2B9DB2",
        },
        "DistributionId": Object {
          "Ref": "ConstructHubWebAppDistribution1F181DC9",
        },
        "Prune": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": Array [
          Object {
            "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3Bucket3FDF578C",
          },
        ],
        "SourceObjectKeys": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3VersionKeyF08BDB71",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3VersionKeyF08BDB71",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        ],
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "ConstructHubWebAppDistribution1F181DC9": Object {
      "Properties": Object {
        "DistributionConfig": Object {
          "Aliases": Array [
            "my.construct.hub",
          ],
          "CacheBehaviors": Array [
            Object {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/packages/*",
              "TargetOriginId": "TestConstructHubWebAppDistributionOrigin276090F90",
              "ViewerProtocolPolicy": "allow-all",
            },
          ],
          "CustomErrorResponses": Array [
            Object {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
            Object {
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": Object {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "TargetOriginId": "TestConstructHubWebAppDistributionOrigin171FF58D3",
            "ViewerProtocolPolicy": "allow-all",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": Array [
            Object {
              "DomainName": Object {
                "Fn::GetAtt": Array [
                  "ConstructHubWebAppWebsiteBucket4B2B9DB2",
                  "RegionalDomainName",
                ],
              },
              "Id": "TestConstructHubWebAppDistributionOrigin171FF58D3",
              "S3OriginConfig": Object {
                "OriginAccessIdentity": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "origin-access-identity/cloudfront/",
                      Object {
                        "Ref": "ConstructHubWebAppDistributionOrigin1S3Origin694AF937",
                      },
                    ],
                  ],
                },
              },
            },
            Object {
              "CustomOriginConfig": Object {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": Array [
                  "TLSv1.2",
                ],
              },
              "DomainName": "awscdk.io",
              "Id": "TestConstructHubWebAppDistributionOrigin276090F90",
            },
          ],
          "ViewerCertificate": Object {
            "AcmCertificateArn": Object {
              "Fn::GetAtt": Array [
                "CertCertificateRequestorResource9D0836FD",
                "Arn",
              ],
            },
            "MinimumProtocolVersion": "TLSv1.2_2019",
            "SslSupportMethod": "sni-only",
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "ConstructHubWebAppDistributionOrigin1S3Origin694AF937": Object {
      "Properties": Object {
        "CloudFrontOriginAccessIdentityConfig": Object {
          "Comment": "Identity for TestConstructHubWebAppDistributionOrigin171FF58D3",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "ConstructHubWebAppWebsiteBucket4B2B9DB2": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "ConstructHubWebAppWebsiteBucketPolicy17174C06": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "ConstructHubWebAppWebsiteBucket4B2B9DB2",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "ConstructHubWebAppDistributionOrigin1S3Origin694AF937",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "ConstructHubWebAppWebsiteBucket4B2B9DB2",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": Object {
      "DependsOn": Array [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3Bucket55EFA30C",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3VersionKey60329B70",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc24b999656e4fe6c609c31bae56a1cf4717a405619c3aa6ba1bc686b8c2c86cfS3VersionKey60329B70",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Layers": Array [
          Object {
            "Ref": "ConstructHubWebAppDeployWebsiteAwsCliLayer23CFFBC1",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
            "Arn",
          ],
        },
        "Runtime": "python3.6",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3Bucket3FDF578C",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "AssetParameters3cd2c7ab44327ca3f59ce81dc71b90767d3c04f7239edf27da8fc1cc29623103S3Bucket3FDF578C",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "ConstructHubWebAppWebsiteBucket4B2B9DB2",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "ConstructHubWebAppWebsiteBucket4B2B9DB2",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "Roles": Array [
          Object {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
